# college-event-openenv

./: Dockerfile  LICENSE  README.md  app.py  baseline.py  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
data/: events.json  registrations.json  students.json
server/: app.py
