[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "college-event-openenv"
version = "0.1.0"
description = "OpenEnv-compatible environment for college event registration"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "openai==1.35.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "inference:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.openenv]
entry_point = "inference:app"
port = 7860
